<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">AppsolutDistribute</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Appsolut Distribute</string>
    <string name="service_ticker_text">Going Online</string>
    <string name="service_app_title">Online</string>
    <string name="service_app_message">Appsolut Distribute</string>
	<string name="error_title">Error:</string>
	<string name="error_on_creating_expandable_list">Error on creating an expandablelist!</string>
	<string name="error_empty_menu">Varning! This menu is empty</string>
	<string name="authority_group_error">Failed to create Authority group correctly</string>
    <string name="exit_title">Are you sure you want to leave?</string>
	<string name="settings_title">Settings</string>
	<string name="username">Username: </string>
	<string name="password">Password: </string>
	<string name="first_name">First name: </string>
	<string name="surname">Surname: </string>
	<string name="email">Email: </string>
	<string name="create_account_button">Create account</string>
	<string name="login_button">Login</string>
	<string name="account_error_no_user_name">Enter Username!</string>
	<string name="account_error_no_password">Enter Password!</string>
	<string name="account_error_short_user_name">Username is to short, must be atleast 4 characters!</string>
	<string name="account_error_long_user_name">Username is to long, maximum length is 20 characters!</string>
	<string name="account_error_short_password">Password is to short, must be atleast 6 characters!</string>
	<string name="account_error_long_password">Password is to long, maximum length is 20 characters!</string>
	<string name="account_error_password_match">Passwords do not match!</string>
	<string name="account_error_first_name">To long first name, maximum length is 20 characters!</string>
	<string name="account_error_surname">To long last name, maximum length is 20 characters!</string>
	<string name="account_error_email">To long email-address, maximum length is 40 characters!</string>
	<string name="account_error_not_valide_email">Your email address is not valid!</string>
	<string name="account_error_username_taken">This username is already taken!</string>
	<string name="create_account_success">Account created</string>
	<string name="failed_to_create_account">Failed to create account!</string>
	<string name="failed_to_login">Failed to login</string>
	<string name="failed_to_go_online">Failed to go online!</string>
	<string name="user_online_message">Online</string>
	<string name="user_offline_message">Offline</string>
	<string name="go_offline_title">Go Offline?</string>
	<string name="set_group_name_subtitle">Set Group Name: </string>
	<string name="create_group_button">Create Group</string>
	<string name="create_group_error_no_name">Set group Name!</string>
	<string name="create_group_error_name_to_short">The group name is to short, must be atleast 4 characters!</string>
	<string name="create_group_error_name_to_long">The group name is to long, maximum length is 20 characters!</string>
	<string name="create_group_error_name_taken">This group name is already taken!</string>
	<string name="create_group_success">Group Created</string>
	<string name="create_group_error_failed">Failed to create group</string>
	<string name="change_group_name_button">Change Group Name</string>
	<string name="change_group_name_subtitle">Change Group Name: </string>
	<string name="change_group_name_error_no_name">Enter new group name!</string>
	<string name="change_group_name_error_name_to_short">New group name is to short, must be atleast 4 characters!</string>
	<string name="change_group_name_error_name_to_long">New group name is to long, maximum length is 20 characters!</string>
	<string name="change_group_name_password_check_subtitle">Password Confirmation: </string>
	<string name="change_group_name_error_no_password">Enter password!</string>
	<string name="change_group_name_error_password_to_short">The password is to short, must be atleast 6 characters!</string>
	<string name="change_group_name_error_password_to_long">The password is to long, maximum length is 20 characters!</string>
	<string name="change_group_name_error_failed">Failed to change group name!</string>
	<string name="change_group_name_success">Group name is changed</string>
	<string name="change_userinfo_button">Change User Information</string>
	<string name="change_userinfo_username_text">Change Username: </string>
	<string name="change_userinfo_username_input_to_short">The new username is to short, must be atleast 4 characters!</string>
	<string name="change_userinfo_username_input_to_long">The new username is to long, maximum length is 20 characters!</string>
	<string name="change_userinfo_first_name_text">Change First Name: </string>
	<string name="change_userinfo_first_name_input_to_long">The new first name is to long, maximum length is 20 characters!</string>
	<string name="change_userinfo_surname_text">Change Surname: </string>
	<string name="change_userinfo_surname_input_to_long">The new surname is to long, maximum length is 20 characters!</string>
	<string name="change_userinfo_email_text">Change Email: </string>
	<string name="change_userinfo_email_input_to_long">The new username is to long, maximum length is 40 characters!</string>
	<string name="change_userinfo_success">You have changed your user information</string>
	<string name="change_userinfo_failed"></string>
	<string name="change_userinfo_email_not_valid"></string>
	<string name="change_password_button">Change Password</string>
	<string name="current_password_text">Current Password:</string>
	<string name="new_password_text">Set Your New Password:</string>
	<string name="change_error_no_current_password">Enter Your Current Password!</string>
	<string name="change_error_current_to_short_password">Current Password is to short, must be atleast 4 characters!</string>
	<string name="change_error_current_to_long_password">Current Password is to long, maximum length is 20 characters!</string>
	<string name="change_error_no_new_password">Enter Your New Password!</string>
	<string name="change_error_new_to_short_password">New Password is to short, must be atleast 4 characters!</string>
	<string name="change_error_new_to_long_password">New Password is to long, maximum length is 20 characters!</string>
	<string name="change_error_new_passwords_mismatch">New passwords do not match!</string>
	<string name="change_error_failed_to_change_password">Failed to change to a new password!</string>
	<string name="change_error_wrong_current_password">Enter this accounts current password!</string>
	<string name="change_password_success">You have changed your password</string>
	<string name="end_account_button">End Account</string>
	<string name="end_account_password_text">Password Confirmation For Ending Account:</string>
	<string name="end_account_no_passwords">If you realt want to end the account, confirm it by enter your current password twice</string>
	<string name="end_account_password_to_short">Password is to short, must be atleast 6 characters.</string>
	<string name="end_account_password_to_long">Password is to long, maximum length is 20 characters.</string>
	<string name="end_account_password_mismatch">Passwords do not match!</string>
	<string name="end_account_last_chance">Do you want to end your account?</string>
	<string name="end_account_failed">Failed to end account!</string>
	<string name="end_account_success">Account Ended</string>
	<string name="leave_group_last_chance">Warning!\nDo You Want To Leave The Group?</string>
	<string name="leave_group_warning_text"> 
	    If you leave this group by misstake you will need to rejoin it.
	    Did you want to go back to the online menu? Use back in Options
	    or press the android back key.
	</string>
	<string name="leave_group_failed">Failed to leave group!</string>
	<string name="leave_group_success">Left group</string>
	<string name="set_group_info_subtitle">Input Group Info:</string>
	<string name="set_group_info_button">Set Group Info</string>
	<string name="end_group_button">End Group</string>
	<string name="end_group_password_subtitle">Enter Confirmation Passwords:</string>
	<string name="end_group_no_passwords">Enter passwords!</string>
	<string name="end_group_password_to_short">Password is to short, must be atleast 6 characters.</string>
	<string name="end_group_password_to_long">Password is to long, maximum length is 20 characters.</string>
	<string name="end_group_password_mismatch">Passwords do not match!</string>
	<string name="end_group_last_chance">Do you want to end this group?</string>
	<string name="end_group_failed">Failed to end the group!</string>
	<string name="end_group_success">Group Ended</string>
	<string name="answer_invite_list_title">Invites From: </string>
	<string name="answer_invite_title">Do you want to join this group</string>
	<string name="answer_invite_message">Group: </string>
	<string name="answer_invite_remove_invite_option">Remove Invite</string>
	<string name="join_group_failed">Failed to join the group!</string>
	<string name="join_group_success">Joined group!</string>
	<string name="answer_join_request_list_title">From: </string>
	<string name="answer_request_title">Do you want this user to join your group?</string>
	<string name="answer_request_message">User: </string>
	<string name="answer_request_remove_user_request">Remove Request</string>
	<string name="answer_request_failed">Failed to add member</string>
	<string name="answer_request_success">A new member joined the group</string>
	<string name="group_member_list_title">Group Members: </string>
	<string name="search_subtitle">Search: </string>
	<string name="search_button">Search</string>
	<string name="search_target_not_found">Search target not found: </string>
	<string name="refresh_button">Refresh</string>
	<string name="my_group_list_title">Joined Groups: </string>
	<string name="my_group_failed_to_enter">Failed to enter the group!</string>
	<string name="join_group_list_title">Available Groups:</string>
	<string name="join_group_failed_send">Failed to successfully send join request!</string>
	<string name="join_group_success_send">The requst was successfully sent to: </string>
	<string name="send_invite_list_title"></string>
	<string name="remove_group_member_title">Select User To Be removed:</string>
	<string name="remove_group_are_you_sure_title">Do you want to remove this group member?</string>
	<string name="remove_group_are_you_sure_message">Member: </string>
	<string name="remove_group_member_failed">Failed to remove group member</string>
	<string name="remove_group_member_success">Removed member from group: </string>
	<string name="done">Done</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="back">Back</string>
	<string name="chat_send_message">Send</string>
    <string name="add_help_tile">: Help</string>
    <string name="add_online_tile">: Online</string>
	<string name="error_service_not_made">Service not made yet!</string>
	<string name="about_text"> 
		This app was created by a group of students at Chalmers University of technology as an assignment. The creators are: Mattias Isene, David Harald, Michael Henriksson, Anton Kostet and Stefan Arvidsson. We are using a free Apache 2.0 license. 
	</string>
	<string name="help1_1"> 
	   Welcome to help! This section will guide you for a better app-experience with AppsolutDistribute. Use the index to find what you are looking for.
	</string>
	<string name="help1_2"> 
	    Information about copyright, license and who made the game. \n 
	</string>
	<string name="help1_3">
	    By pressing the settings button a small popup will appear in the button of the screen. This is possible wherever you are in the app and from here you can change settings for your account.
	</string>
	<string name="help1_4">
	
	</string>
</resources>