<?xml version="1.0" encoding="utf-8"?>
<!--    Copyright [2012] [Stefan Arvidsson]

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.

 -->
  <!-- The change user information dialog layout -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/dialog_scroll_style" >

    <LinearLayout style="@style/dialog_linearlayout_style" >

        <!-- Change username -->
        <TextView
            android:id="@+id/change_username_subtitle"
			style="@style/dialog_textview_style"
            android:text="@string/change_userinfo_username_text" />	
		<EditText
            android:id="@+id/change_username_text_input"
            style="@style/dialog_edittext_style"
            android:inputType="text" >
        </EditText>
        <!-- Change First Name -->
         <TextView
            android:id="@+id/change_first_name_subtitle"
			style="@style/dialog_textview_style"
            android:text="@string/change_userinfo_first_name_text" />
		<EditText
            android:id="@+id/change_first_name_text_input"
            style="@style/dialog_edittext_style"
            android:inputType="text" >
        </EditText>      
        <!-- Change Surname -->
         <TextView
            android:id="@+id/change_surname_subtitle"
			style="@style/dialog_textview_style"
            android:text="@string/change_userinfo_surname_text" />
		<EditText
            android:id="@+id/change_surname_text_input"
            style="@style/dialog_edittext_style"
            android:inputType="text" >
        </EditText>      		
        <!-- Change Email -->
         <TextView
            android:id="@+id/change_email_subtitle"
			style="@style/dialog_textview_style"
            android:text="@string/change_userinfo_email_text" />
		<EditText
            android:id="@+id/change_email_text_input"
            style="@style/dialog_edittext_style"
            android:inputType="text" >
        </EditText>      			
        
	    <Button
    		android:id="@+id/change_userinfo_button"
			style="@style/dialog_button_style"  
    		android:text="@string/change_userinfo_button"
     	></Button>
      <include android:id="@+id/dialog_back_button"
               layout="@layout/dialog_back_button" />
        
	</LinearLayout>
	
</ScrollView>