<?xml version="1.0" encoding="utf-8"?>
 <!--
   Copyright [2012] [Stefan Arvidsson]

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.

-->
 <!--  -->
  <!-- Standard searchable list dialog layout  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android" >
           
    	   <TextView
            android:id="@+id/edittext_search_list_subtitle"
			style="@style/dialog_textview_style"
			android:text="@string/search_subtitle"
			/> 
    
            <include
            android:id="@+id/user_text_input"
            layout="@layout/dialog_text_input" />  
            
            <Button
    			android:id="@+id/dialog_search_button"
    			style="@style/dialog_button_style"  	
				android:text="@string/search_button" 
    		></Button>
      		
      		<Button
    			android:id="@+id/dialog_refresh_button"
    			style="@style/dialog_button_style"  	
				android:text="@string/refresh_button" 
    		></Button>
            
           <TextView
            android:id="@+id/searchable_list_subtitle"
			style="@style/dialog_textview_style"/> 
        
        <ListView
            android:id="@+id/listview"
            style="@style/list_dialog"
               >
        </ListView>

        
       <include
            android:id="@+id/dialog_back_button"
            layout="@layout/dialog_back_button" 
            />
</merge>